<resources>
    <string name="app_name">Visitor Management</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="visitors">Visitors</string>
    <string name="about">About</string>
    <string name="login_here">Login Here..</string>
    <string name="login">Login</string>
    <string name="register_here">Register here..</string>
    <string name="cange_language">Change Language</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="list_of_visitors">List of visitors</string>
    <string name="deskripsi">This visitor management application is an application that functions to manage visitors in a place, this application is made to make it easier for us to see a list of visitors</string>
    <string name="created_by_pascal_aditia_muclis">Created by Pascal Aditia Muclis</string>
    <string name="welcome_n_visitors">Welcome \n Visitors</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="profession">Profession</string>
    <string name="input_here">Input Here..</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="detail_visitors">Detail Visitors</string>
    <string name="yes">Yes</string>
    <string name="yakin">Are you sure?</string>
    <string name="titleDelete">Delete Data</string>
    <string name="titleLogout">Logout</string>
</resources>