<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.home.InputActivity">

    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/topbar"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/topbar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/happyschool"
            android:text="@string/input_here"
            android:textColor="#fff"
            android:textSize="25sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/topbar"
            android:layout_centerInParent="true"
            android:layout_margin="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical"
                android:padding="10dp">

                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:drawablePadding="5dp"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/input_address"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    android:drawablePadding="5dp"
                    android:hint="@string/address"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/input_nohp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    android:drawablePadding="5dp"
                    android:hint="No HP"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/input_profession"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    android:drawablePadding="5dp"
                    android:hint="@string/profession"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/input_visitors"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    android:drawablePadding="5dp"
                    android:hint="@string/visitors"
                    android:padding="10dp" />

                <Button
                    android:id="@+id/btn_inputSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/bgg_button"
                    android:fontFamily="@font/happyschool"
                    android:text="@string/save"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_inputCancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/bgg_button2"
                    android:fontFamily="@font/happyschool"
                    android:text="@string/cancel"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <ImageView
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:src="@drawable/bottom" />
    </RelativeLayout>
</RelativeLayout>