<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.loginregist.fragment.LoginFragment">

    <ImageView
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/topbar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/happyschool"
        android:text="@string/detail_visitors"
        android:textColor="#fff"
        android:textSize="25sp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/detail_image"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_below="@+id/topbar"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/foto"
        app:civ_border_color="#9DD2FE"
        app:civ_border_width="7dp" />

    <TextView
        android:id="@+id/detail_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topbar"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="80dp"
        android:layout_toRightOf="@+id/detail_image"
        android:fontFamily="@font/happyschool"
        android:text="@string/name"
        android:textColor="#9DD2FE"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/detail_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_name"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/detail_image"
        android:drawableLeft="@drawable/ic_location"
        android:text="@string/address"
        android:textSize="18sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_image"
        android:layout_margin="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/detail_nohp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/detail_name"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:layout_toRightOf="@+id/detail_image"
                android:drawableLeft="@drawable/ic_location"
                android:drawablePadding="10dp"
                android:text="No HP"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_profession"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/detail_name"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:layout_toRightOf="@+id/detail_image"
                android:drawableLeft="@drawable/ic_profession"
                android:drawablePadding="10dp"
                android:text="@string/profession"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_visitors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/detail_name"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:layout_toRightOf="@+id/detail_image"
                android:drawableLeft="@drawable/ic_visitors"
                android:drawablePadding="10dp"
                android:text="@string/visitors"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_detailBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/bgg_button"
                android:fontFamily="@font/happyschool"
                android:text="@string/back"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/created_by_pascal_aditia_muclis"
                android:textSize="15sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:src="@drawable/bottom" />
</RelativeLayout>